--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,18 +1,14 @@
 name: Lint
-
 on:
   push:
-
-  workflow_dispatch:
   pull_request:
+  workflow_dispatch:
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - name: Install pnpm
-        run: npm install -g pnpm
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
-      - name: Run ESLint
-        run: pnpm lint
+      - uses: denoland/setup-deno@v1
+        with:
+          deno-version: v1.42.0
+      - run: deno fmt --check .
