--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,11 @@
 {
-    "extends": "./tsconfig.base.json",
-    "include": [
-        "src/**/*"
-    ],
-    "compilerOptions": {
-        "sourceMap": true,
-        "sourceRoot": "src",
-        "declaration": true,
- 
-    }
+	"compilerOptions": {
+		"allowImportingTsExtensions": true,
+		"declaration": true,
+		"lib": ["ESNext", "DOM"],
+		"target": "ESNext",
+		"module": "ESNext",
+		"outDir": "dist"
+	},
+	"files": ["src/index.ts"]
 }
