fixes and linting and npm publish

--- a/deno.json
+++ b/deno.json
@@ -14,5 +14,20 @@
 		"useTabs": true,
 		"singleQuote": true
 	},
+	"lint": {
+		"rules": {
+			"include": [
+				"ban-untagged-todo",
+				"default-param-last",
+				"eqeqeq",
+				"no-eval",
+				"triple-slash-reference",
+				"verbatim-module-syntax"
+			]
+		},
+		"exclude": [
+			".github/**/*"
+		]
+	},
 	"lock": false
 }
